# mandelbrot

./: pyproject.toml
part1/: apply.py  complex_plane.py  final.py  plot_complex_plane.py  setup.py
part2/: app.py  utils.py
